<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку:</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="clear">Очистить</string>
    <string name="support_message_email">maseman.sa@yandex.ru</string>
    <string name="support_message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="history_title">Вы искали</string>
    <string name="history_clear_btn">Очистить историю</string>
    <string name="playlist_country">Страна</string>
    <string name="duration">Длительность</string>
</resources>