<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    tools:context="SearchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/searchToolbar"
        app:title="@string/search"
        style="@style/SearchPageToolbar"
        app:buttonGravity="center_vertical"
        />

    <FrameLayout
        android:id="@+id/input_container"
        style="@style/SearchFrameTextEdit"
        >

        <EditText
            android:id="@+id/editTextFrame"
            style="@style/SearchPageTextEdit"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="text"
            android:maxLength="99"
            android:maxLines="1"
             />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_close_button"
            style="@style/CloseButton" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/splashscreenNothingFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="98dp"
        android:visibility="gone"

        >

        <ImageView
            android:id="@+id/splashscreenNothingFoundIcn"
            style="@style/SplashscreenErrorIcon"
            />

        <com.google.android.material.textview.MaterialTextView
            style="@style/SplashscreenNetworkErrorText"
            android:text="@string/nothing_found"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/splashscreenNetworkError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <ImageView
            style="@style/SplashscreenNetworkErrorIcon"

            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/splashscreenNetworkErrorText"
        style="@style/SplashscreenNetworkErrorText"
        android:text="@string/network_error"
        />

        <com.google.android.material.button.MaterialButton
        android:id="@+id/splashscreenNothingBtn"
        style="@style/SplashscreenNetworkErrorButton"
        android:text="@string/update"
        />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/toolbar_margin_buttom"
        android:visibility="gone"
        >

        <com.google.android.material.textview.MaterialTextView
            style="@style/HistoryView"
            android:text="@string/history_title"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_tracksRecycle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/icon_padding"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_history_button"
            style="@style/SplashscreenNetworkErrorButton"
            android:layout_marginVertical="@dimen/toolbar_margin_buttom"
            android:text="@string/history_clear_btn"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_tracksRecycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/search_for_track"
        />

</LinearLayout>
