<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pm_blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/low_padding"
        android:paddingEnd="@dimen/end_padding"
        android:paddingVertical="@dimen/low_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/main_fontSize"
            android:layout_gravity="start"
            android:paddingStart="12dp"
            android:paddingEnd="52dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="28dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:layout_gravity="center"
            android:text="@string/search"
            android:textColor="@color/pm_black"
            android:textSize="@dimen/main_fontSize"
            app:icon="@drawable/search_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/pm_black"
            app:cornerRadius="@dimen/button_radius"/>

        <Button
            android:id="@+id/media_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/white"
            android:layout_gravity="center"
            android:text="@string/media"
            android:textColor="@color/pm_black"
            android:textSize="@dimen/main_fontSize"
            app:icon="@drawable/media_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/pm_black"
            app:cornerRadius="@dimen/button_radius"/>

        <Button
            android:id="@+id/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="@color/pm_black"
            android:textSize="@dimen/main_fontSize"
            app:icon="@drawable/settings_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/pm_black"
            app:cornerRadius="@dimen/button_radius"/>

    </LinearLayout>
</LinearLayout>